--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-audio-spectrogram-player": "^2.0.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -18,4 +19,3 @@
     "vite": "^5.0.8"
   }
 }
-
